# xme

./: .env.example  .gitignore  =2.0  README.md  docker-compose.yml  pnpm-lock.yaml  pyproject.toml  requirements.txt  start.py
components/console/: ambient-glow.tsx  console-provider.tsx  status-card.tsx  status-dot.tsx  top-bar.tsx
components/console/control/: config-tab.tsx  control-panel.tsx  logs-tab.tsx  wechat-tab.tsx
components/console/insights/: insight-actions.tsx
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/console/: console-shell.tsx  empty-state.tsx  side-nav.tsx  toasts.tsx
frontend/components/console/chat/: chat-panel.tsx  message-bubble.tsx  message-input.tsx  (+1 more)
frontend/lib/: format.ts  sentiment.ts  services.ts  word-frequency.ts
frontend/lib/__checks__/: insights.check.ts
lib/: api.ts  console-types.ts
scripts/: check_bge_m3.py  test_acceptance.py  test_volcengine.py
src/: __init__.py  config.py  llm_factory.py
src/api/: __init__.py  server.py  wx_api.py
src/core/: __init__.py  agent.py  main.py  scheduler.py  token_tracker.py
src/memory/: __init__.py  client.py  embedding.py  graph.py  prompts.py
src/tools/: __init__.py  graph_tools.py  note_tools.py
src/weixin/: __init__.py  auth.py  bot.py  channel.py  user_context.py
tests/: conftest.py  test_agent.py  test_api.py  test_config.py  test_graph.py  test_memory_client.py  test_scheduler.py  test_tools.py  test_weixin_auth.py  test_weixin_bot.py  test_weixin_channel.py
(+6 files in other folders)
