[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-companion"
version = "0.1.0"
description = "AI 陪伴 Agent - v5"
requires-python = ">=3.13"
dependencies = [
    "langgraph==0.2.27",
    "langgraph-checkpoint-sqlite>=1.0.0,<2.0.0",
    "langchain-core==0.3.0",
    "langchain-openai==0.2.0",
    "qdrant-client==1.12.1",
    "neo4j==5.24.0",
    "openai==1.48.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "huggingface-hub>=0.25.0",
    "sentence-transformers>=3.0.0",
    "apscheduler>=3.11,<4.0",
    "sqlalchemy>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "sse-starlette>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[project.scripts]
ai-companion = "src.core.main:main"
ai-companion-api = "src.api.server:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]  # 暂不强制文档字符串
